--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 oauth2client==3.0.0
+google-api-python-client==2.1.0
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.4
+numpy==1.20.2
+pandas==1.2.3
+streamlit==0.79.0
+watchdog==2.0.2
+plotly==4.14.3
+plotly-express==0.4.1
