--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -10,3 +10,6 @@ BALANCE_LIFE_DISTRIBUTION: [0, 0.05, 0.7, 0.2, 0.05, 0]
 
 KPI_HISTORICAL_WINDOW: 4
 KPI_IMPROVEMENT_RATE: 1.2
+
+ROTTEN_PROJECT_GREEN_THRESHOLD: 1
+ROTTEN_PROJECT_YELLOW_THRESHOLD: 3
