--- a/configs/2021.yaml
+++ b/configs/2021.yaml
@@ -1,15 +1,15 @@
 
-POMODOROS_SPREADSHEET_ID: 1nEApy_YQ05sQBH9dJt1PoeTpKU0KRNoHdwb4uPB7qDY
-POMODOROS_RANGE: pomodoros!B:H
+POMODOROS_SPREADSHEET_ID: 1ushlABGAcGa9982wRDSEXz3bKjnaYqLE7Rl6A5w1jAg
+POMODOROS_RANGE: pomodoros-2021!B:H
 
-ACTIVITIES_SPREADSHEET_ID: 1nEApy_YQ05sQBH9dJt1PoeTpKU0KRNoHdwb4uPB7qDY
+ACTIVITIES_SPREADSHEET_ID: 1ushlABGAcGa9982wRDSEXz3bKjnaYqLE7Rl6A5w1jAg
 ACTIVITIES_RANGE: activities-catalog!B:F
 
 # ['life', 'personal', 'career', 'hobby', 'society', 'health']
 BALANCE_LIFE_DISTRIBUTION: [0, 0.05, 0.7, 0.2, 0.05, 0]
 
 KPI_HISTORICAL_WINDOW: 4
-KPI_IMPROVEMENT_RATE: 1.05
+KPI_IMPROVEMENT_RATE: 1.2
 
 ROTTEN_PROJECT_GREEN_THRESHOLD: 1
 ROTTEN_PROJECT_YELLOW_THRESHOLD: 3
