add monthly goals

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -5,6 +5,9 @@ POMODOROS_RANGE: pomodoros!B:H
 ACTIVITIES_SPREADSHEET_ID: 1nEApy_YQ05sQBH9dJt1PoeTpKU0KRNoHdwb4uPB7qDY
 ACTIVITIES_RANGE: activities-catalog!B:F
 
+MONTHLY_GOALS_SPREADSHEET_ID: 1nEApy_YQ05sQBH9dJt1PoeTpKU0KRNoHdwb4uPB7qDY
+MONTHLY_GOALS_RANGE: monthly!B:H
+
 # ['life', 'personal', 'career', 'hobby', 'society', 'health']
 BALANCE_LIFE_DISTRIBUTION: [0, 0.05, 0.7, 0.2, 0.05, 0]
 
@@ -13,3 +16,5 @@ KPI_IMPROVEMENT_RATE: 1.05
 
 ROTTEN_PROJECT_GREEN_THRESHOLD: 1
 ROTTEN_PROJECT_YELLOW_THRESHOLD: 3
+
+MONTHLY_GOALS_TREE_CHART_HEIGHT: '800px'
